--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,32 @@
+.App {
+  height: 100%;
+  min-height: 100vh;
+}
+
+.container {
+  min-height: 100vh;
+  height: 100%;
+  position: relative;
+}
 .App-header {
   text-align: center;
   text-transform: uppercase;
-  margin: 3vh 0;
+  padding: 1.5vh 0;
+}
+
+.App-body {
+  background-color: rgba(177, 177, 177, 0.411);
+  min-height: 80vh;
+  height: 100%;
+  border-radius: 4px;
+  box-shadow: 0px 5px 10px rgba(128, 128, 128, 0.3);
+  padding: 2vh 2vw;
 }
 
 .App-footer {
   text-align: center;
-  margin: 3vh 0;
+  width: 100%;
+  display: block;
+  padding: 1vh 0;
+  margin: 0 auto;
 }
