--- a/src/components/meaning/Meaning.css
+++ b/src/components/meaning/Meaning.css
@@ -1,4 +1,12 @@
-li {
+.Meaning {
+  background-color: white;
+  padding: 1vh 1vw;
+  margin: 2vh auto;
+  border-radius: 4px;
+  box-shadow: 0 5px 6px rgba(128, 128, 128, 0.6);
+}
+
+.Meaning li {
   list-style-type: none;
 }
 
@@ -6,6 +14,6 @@ li {
   color: rgb(255, 145, 0);
 }
 
-strong {
+.Meaning strong {
   color: rgb(66, 66, 66);
 }
